# tts-server

./: .gitignore  README.md  pyproject.toml  run.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
dev/: coqui_inference.py
src/: main.py
src/api/: speech_to_text.py  text_to_speech.py
src/core/: dependencies.py
src/services/: splitter.py  text_to_speech.py
tests/: test_split_sentence.py
